[tool.poetry]
name = "combinations"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.8.0"
pyvis = "^0.2.1"
rich = "^12.4.1"
pandas = "^1.4.2"
ipykernel = "^6.13.0"
notebook = "^6.4.11"
UpSetPlot = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
